--- a/src/app/components/auth/components/login/login.component.html
+++ b/src/app/components/auth/components/login/login.component.html
@@ -69,7 +69,7 @@
             
             <!-- Forgot Password Link -->
             <div class="flex items-center justify-between">
-              <a href="#" class="text-sm font-medium text-primary-600 hover:underline dark:text-primary-500">
+              <a [routerLink]="['/request-reset-password']" class="text-sm font-medium text-primary-600 hover:underline dark:text-primary-500">
                 Forgot password?
               </a>
             </div>
