--- a/src/app/components/page-sections/header/header.component.html
+++ b/src/app/components/page-sections/header/header.component.html
@@ -24,7 +24,7 @@
                 dark:focus:ring-cyan-800 font-medium rounded-lg 
                 text-xs sm:text-sm px-3 sm:px-5 py-1 sm:py-2.5 
                 text-center me-2 mb-2">
-            Product
+            Events
             </a>
 
             <!-- Log In (if not authenticated) -->
