--- a/src/app/pages/reset-password/reset-password.component.html
+++ b/src/app/pages/reset-password/reset-password.component.html
@@ -8,19 +8,44 @@
                 <h1 class="mb-1 text-xl font-bold leading-tight tracking-tight text-gray-900 sm:text-2xl dark:text-white">
                    Reset your password
                 </h1>
-                <form class="mt-4 space-y-4 md:space-y-5 lg:mt-5" action="#">
+                <form [formGroup]="resetPasswordForm" (ngSubmit)="sendNewPassword()" class="mt-4 space-y-4 md:space-y-5 lg:mt-5" action="#">
                     <div>
                         <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">New Password</label>
-                        <input type="password" name="password" id="password" placeholder="••••••••" class="bg-gray-50 border border-gray-300 text-gray-500 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required="">
+                        <input formControlName="password"  type="password" name="password" id="password" placeholder="••••••••" class="bg-gray-50 border border-gray-300 text-gray-500 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required="">
+                        <ng-container *ngIf="resetPasswordForm.get('password') as passwordControl">
+                            <div *ngIf="passwordControl.invalid && (passwordControl.dirty || passwordControl.touched)" class="text-red-500 text-xs mt-1">
+                              <div *ngIf="passwordControl.errors?.['required']">
+                                Password is required.
+                              </div>
+                              <div *ngIf="passwordControl.errors?.['maliciousContent']">
+                                {{ passwordControl.errors?.['maliciousContent'].message }}
+                              </div>
+                            </div>
+                        </ng-container>
                     </div>
                     <div>
                         <label for="confirm-password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Confirm password</label>
-                        <input type="confirm-password" name="confirm-password" id="confirm-password" placeholder="••••••••" class="bg-gray-50 border border-gray-300 text-gray-500 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required="">
+                        <input formControlName="password_confirmation"  type="password" name="confirm-password" id="confirm-password" placeholder="••••••••" class="bg-gray-50 border border-gray-300 text-gray-500 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required="">
+                        <ng-container *ngIf="resetPasswordForm.get('password_confirmation') as resetPasswordControl">
+                            <div *ngIf="resetPasswordControl.invalid && (resetPasswordControl.dirty || resetPasswordControl.touched)" class="text-red-500 text-xs mt-1">
+                              <div *ngIf="resetPasswordControl.errors?.['required']">
+                                Password confirmation is required.
+                              </div>
+                              <div *ngIf="resetPasswordControl.errors?.['maliciousContent']">
+                                {{ resetPasswordControl.errors?.['maliciousContent'].message }}
+                              </div>
+                            </div>
+                        </ng-container>
+                        <div *ngIf="resetPasswordForm.errors?.['passwordsMismatch'] && (resetPasswordForm.dirty || resetPasswordForm.touched)" class="text-red-500 text-xs mt-1">
+                          Passwords do not match.
+                      </div>
                     </div>
                     <button type="submit" class="w-[100%] h-[100%] text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 
                     hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 
                     dark:focus:ring-blue-800 font-medium rounded-lg text-base px-4 sm:px-6 py-2 sm:py-3 
-                    text-center me-2 mb-2 disabled:opacity-50">Reset password</button>
+                    text-center me-2 mb-2 disabled:opacity-50"
+                    [disabled]="resetPasswordForm.invalid">
+                    Send email</button>
                     <p class="text-sm text-center text-gray-500 dark:text-gray-400">If you still need help, contact <a [routerLink]="['/contact-us']" 
                         class="font-medium text-primary-600 dark:text-primary-500 hover:underline">RESIST support</a>.</p>
                 </form>
